--- a/literature.bib
+++ b/literature.bib
@@ -473,6 +473,15 @@ year = {2017}
   year={2016}
 }
 
+@inproceedings{lin2014microsoft,
+  title={Microsoft coco: Common objects in context},
+  author={Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Hays, James and Perona, Pietro and Ramanan, Deva and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
+  booktitle={European conference on computer vision},
+  pages={740--755},
+  year={2014},
+  organization={Springer}
+}
+
 @article{werner2007linear,
   title={A linear programming approach to max-sum problem: A review},
   author={Werner, Tomas},
