--- a/lifted-multicut.tex
+++ b/lifted-multicut.tex
@@ -70,6 +70,9 @@ where $E = \{i_1 j_1, \ldots, i_m j_m\}$ and $c_1,\ldots,c_m$ are the correspond
 where $E' = \{i'_1 j'_1, \ldots, i'_m j'_m\}$ and $c'_1,\ldots,c'_m$ are the corresponding lifted edge weights.
 
 \subsection{Datasets}
+Four standard MOT benchmarks.
+The MOT15/16/17 benchmarks \cite{MOTChallenge2015,MOT16} contain semi-crowded videos sequences filmed from a~static or a~moving camera. 
+MOT20 \cite{MOTChallenge20} comprises crowded scenes with considerably higher number of  frames  and detections per frame
 
 \subsubsection{Multi-Camera Multi Object Tracking}
 \paragraph{Wildtrack}
