--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,8 @@ backgroundcolor=\color{light-gray}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}
 
+\mathchardef\mhyphen="2D
+
 
 \title{Structured Prediction Problem Archive}
 
