Fixed typos, added new graph matching illustration, added bottleneck optimization instances.

--- a/cell-tracking.tex
+++ b/cell-tracking.tex
@@ -98,7 +98,7 @@ CONFSET (*$i_1$*) + ... + (*$i_l$*) <= 1
     \item[\normalfont Cell appearance/disappearance] start with `APP' (resp.\ `DISAPP'), next comes the timeframe $t$, then the id $i$ and last the appearance/disappearance cost $c$.
     \item[\normalfont Cell movements] start with `MOVE', next come the movement id, then the ids of the two involved cell detections.
     \item[\normalfont Cell divisions] start with `DIV', next come the division id, then the ids of the three involved cell detections.
-    \item[\normalfont Exclusion constraints] start with `CONFSET' and uses the ids of the involved cell detections.
+    \item[\normalfont Exclusion constraints] start with `CONFSET' and use the ids of the involved cell detections.
 \end{description}
 
 We provide LP files for all cell tracking instances as well.
@@ -112,7 +112,7 @@ The instances can be grouped as follows.
 
 \paragraph{Drosophila embryo}
 One problem instance for tracking nuclei in a developing Drosophila embryo.
-The tracking models consists of up tp 252 frames $\sim 320$ detection hypotheses and each and $\sim 160$ true cells.
+The tracking models consists of up to 252 frames $\sim 320$ detection hypotheses each and $\sim 160$ true cells.
 
 \paragraph{Flywing}
 Tracking membrane-labelled cells in developing Drosophila flywing tissue.
