--- a/introduction.tex
+++ b/introduction.tex
@@ -62,8 +62,10 @@ End
 
 \subsection{Algorithms}
 \begin{description}[style=unboxed]
-\item[CPLEX~\cite{cplex}:] Classic leading ILP solver from IBM.
-\item[Gurobi~\cite{gurobi}:] Newer leading ILP solver.
+\item[CPLEX~\cite{cplex}:] Classic leading commercial ILP solver from IBM.
+\item[Gurobi~\cite{gurobi}:] Newer leading commercial ILP solver.
+\item[Mosek~\cite{mosek}:] Another leading commercial ILP solver.
+\item[SCIP~\cite{achterberg2009scip}:] Leading academic ILP and constraint integer solver.
 \item[BDD Min-Marginal Averaging~\cite{lange2021efficient}:]
 Decompose ILPs into subproblems represented by binary decision diagrams. Solve the resulting Lagrange decomposition by a sequential min-marginal averaging or with a parallel extension.
 \item[Fast Discrete Optimization on GPU (FastDOG)~\cite{abbas2021fastdog}:] Extension of the BDD min-marginal averaging to a massively parallel GPU solver.
