--- a/main.tex
+++ b/main.tex
@@ -77,7 +77,11 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda, Andrea Hornakova, Paul R\"otzer, Ahmed Abbas}
+\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul R\"otzer$^\ddagger$, Ahmed Abbas$^\dagger$}
+\date{%
+$^\dagger$MPI for Informatics, %
+$^\ddagger$TU Munich%
+}
 
 \begin{document}
 \maketitle
@@ -102,12 +106,12 @@ We hope that this central repository will make benchmarking and comparison to es
 \input{mrf}
 \clearpage
 \input{multicut}
-\clearpage
-\input{lifted-multicut}
+%\clearpage
+%\input{lifted-multicut}
 \clearpage
 \input{asymmetric-multiway-cut}
-\clearpage
-\input{lifted-disjoint-paths}
+%\clearpage
+%\input{lifted-disjoint-paths}
 \clearpage
 \input{graph-matching}
 \clearpage
