--- a/asymmetric-multiway-cut.tex
+++ b/asymmetric-multiway-cut.tex
@@ -55,7 +55,7 @@ In~\cite{abbas2021combinatorial} the asymmetric multiway cut solver was used for
 
 \paragraph{Cityscapes}
 Contains traffic related images from~\cite{cordts2016cityscapes} of resolution $1024 \times 2048$\footnote{\url{https://keeper.mpdl.mpg.de/f/63bfbea779d042a59a4d/?dl=1}} and $4 \times$ downsampled ones at resolution $256 \times 512$\footnote{\url{https://keeper.mpdl.mpg.de/f/956f3e74320a432295d9/?dl=1}}.
-Images contain $21$ classes, divided into $8$ \lq thing\rq\ and $11$ \lq stuff\rq\ classes.
+Images contain $21$ classes divided into $8$ \lq thing\rq\ and $11$ \lq stuff\rq\ classes.
 $100$ easy and $100$ hard to segment images from the validation set were chosen for the benchmark. 
 
 \paragraph{COCO}
