--- a/bottleneck-mrf.tex
+++ b/bottleneck-mrf.tex
@@ -23,7 +23,8 @@ MAX-POTENTIALS
 What follows after MARKOV is the ordinary MRF part describing $\theta$ potentials in Definition~\ref{def:bottleneck-mrf} and what follows after MAX-POTENTIALS are the $\psi$ potentials for the bottleneck part in Definition~\ref{def:bottleneck-mrf}.
 
 \subsection{Datasets}
-\subsubsection{Horizon Tracking}
+\subsubsection[Horizon Tracking]{Horizon Tracking\footnote{https://keeper.mpdl.mpg.de/f/4b0af028e879482b8037/?dl=1}}
+12 horizon tracking instances and ground truth data for tracking subsurface rock layers generated from subsurface volumes F3 Netherlands, Opunake-3D, Waka-3D from The Society of Exploration Geophysicists.
 
 \subsection{Algorithms}
 \begin{description}[style=unboxed]
