--- a/multicut.tex
+++ b/multicut.tex
@@ -56,13 +56,13 @@ The CREMI-challenge~\cite{cremi} is to group voxels from 3D-volumes of fruit-fly
 The raw image data was acquired by~\cite{zheng2018complete} and converted to multiple multicut instances as detailed below.
 
 \paragraph{Superpixel\footnote{\url{https://keeper.mpdl.mpg.de/f/811b88d4c97644d39ea9/?dl=1}}}
-For converting the data into multicut instances~\cite{pape2017solving} first created super-pixels and then computed affinities between these for estimating probabilities superpixels belong to the same neuron.
-The majority of these instances are different crops of one global problem.
+For converting the data into multicut instances the authors of~\cite{pape2017solving} first created super-pixels and then computed affinities between these for estimating probabilities that superpixels belong to the same neuron.
+Instances are different crops of one global problem.
 There are 3 small ($400000-600000$ edges), 3 medium ($4-5$ million edges) and 5 large ($28-650$ million edges) multicut instances.
 
 \paragraph{Raw\footnote{\url{https://keeper.mpdl.mpg.de/f/3916d2da6aa840139206/?dl=1}}}
 Multicut instances are derived directly from the voxel grid without conversion to superpixels.
-For that the three test volumes sample A+, B+ and C+ from~\cite{cremi}.
+Three test volumes sample A+, B+ and C+ from~\cite{cremi} were used.
 Edge weights are computed by~\cite{torch_EM}.
 There are two types of instances:
 (i)~The three full problems where the underlying volumes have size $1250 \times 1250 \times 125$ with around $700$ million edges and
@@ -78,12 +78,14 @@ Each instance contains approximately $2$ million nodes and $9$ million edges.
 \begin{description}
 \item[CGC~\cite{beier2014cut}:] Cut, Glue \& Cut, a heuristic that alternatingly bipartitions the graph and exchanges nodes in pairs of clusters via max-cut computed by a reduction to perfect matching.
 \item[Fusion Moves~\cite{beier2017multicut}:] Explore subspaces of multicuts generated randomly via solving it with ILP-solvers.
-\item[GAEC \& KLj~\cite{keuper2015efficient}:] The greedy additive edge contraction (GAEC) iteratively takes the most attractive edge and contract it until no attractive edge is present.
+\item[GAEC \& KLj~\cite{keuper2015efficient}:] The greedy additive edge contraction (GAEC) iteratively takes the most attractive edge and contracts it until no attractive edge is present.
 Kernighan \& Lin with joins (KLj) computes sequences of node exchanges between clusters and cluster joins that improve the objective.
-\item[Balanced Edge Contraction~\cite{kardoost2018solving}:] Like GAEC but additionally preferring edges with endpoints that contain less original nodes.
-\item[Greedy Edge Fixation~\cite{levinkov2019comparative}:] Like GAEC but additionally prevent contractions on certain edges.
+\item[Balanced Edge Contraction~\cite{kardoost2018solving}:] Like GAEC but additionally preferring edges with endpoints that contain fewer original nodes.
+\item[Greedy Edge Fixation~\cite{levinkov2019comparative}:] Like GAEC but additionally prevent contractions on certain repulsive edges.
 \item[RAMA~\cite{abbas2021combinatorial}:] Primal/dual algorithm using parallel edge contraction and fast separation/message passing for computing lower bounds and reduced costs.
 \item[Message Passing~\cite{swoboda2017message}:] Sequential separation/message passing.
 \item[Cycle Packing \& Persistency~\cite{lange2018partial}:] Fast cycle separation with interleaved greedy cycle packing for obtaining dual lower bounds. Simple persistency criteria for fixing variables to optimal values without optimizing the whole problem.
 \item[Combinatorial Persistency Criteria~\cite{lange2019combinatorial}:] A number of persistency criteria for fixing variable to their optimal values ranging from easy enumerative to more involved ones which require optimization of larger subproblems.
+\item[LP-rounding~\cite{demaine2006correlation}:]
+    Solving an LP-relaxation and subsequent region growing rounding with approximation guarantees for the correlation clustering formulation.
 \end{description}
