Add bronstein to literature

--- a/literature.bib
+++ b/literature.bib
@@ -1435,3 +1435,10 @@ url = "http://thrust.github.io/", note = "Version 1.7.0"
   year={2008},
   publisher={IEEE}
 }
+
+@book{bronstein2008,
+	title = {Numerical Geometry of Non-Rigid Shapes},
+	author = {Bronstein, Alexander and Bronstein, Michael and Kimmel, Ron},
+	year = {2008},
+	publisher = {{Springer Science \& Business Media}}
+}
