Added projection operator to shape matching, updated Roetzer affiliation.

--- a/main.tex
+++ b/main.tex
@@ -77,10 +77,11 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul R\"otzer$^\ddagger$, Ahmed Abbas$^\dagger$}
+\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Ahmed Abbas$^\dagger$}
 \date{%
 $^\dagger$MPI for Informatics, %
-$^\ddagger$TU Munich%
+$^\ddagger$TU Munich, %
+$^\star$University of Bonn %
 }
 
 \begin{document}
